Fixed #1859 - Adjusted max-width of the content area of the modal to match the comp Fixed #1856 - Adjusted modal headline size on modal to better match the comp Adjusted nbsp/word wrapping issue

--- a/public/css/share.css
+++ b/public/css/share.css
@@ -94,7 +94,7 @@
 }
 
 .share-monitor--modal-text {
-  max-width: 550px;
+  max-width: 560px;
   width: 100%;
   padding: 1em 0;
 }
@@ -227,6 +227,6 @@
     display: inline;
   }
   .share-monitor--modal-text h2 {
-    font-size: 24px;
+    font-size: 28px;
   }
 }
